applications/sands-of-time/sands-of-time-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sands-of-time
  namespace: sands-of-time
spec:
  selector: {}
  ports:
    - name: http
      port: 80
      targetPort: http
